# hw_3

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
include/: avltree.hpp  set.hpp
tests/: CMakeLists.txt
tests/extra_test/: CMakeLists.txt
tests/extra_test/src/: test_set.cpp
tests/speed_test/: CMakeLists.txt
tests/speed_test/src/: speed_test.cpp
tests/src/: my_test_set.cpp
